<resources>
    <!-- Application String -->
    <string name="app_name">Super Seniors</string>
    <string name="action_logout">Logout</string>
    <string name="action_settings">Settings</string>
    <string name="action_language_english">English</string>
    <string name="action_language_chinese">Chinese (Traditional)</string>
    <string name="action_about">About</string>


    <!-- Foreground Service -->
    <string name="app_running_title">Super Seniors is running</string>
    <string name="app_running_context">Touch for more information</string>

    <!-- Crash Screen -->
    <string name="title_crash_screen">Error Page</string>
    <string name="error_title">Something went wrong!</string>
    <string name="error_occurred">An error occurred. We\'re deeply sorry.</string>
    <string name="error_details">Error details:</string>
    <string name="unknown_exception">Unknown exception</string>
    <string name="restart_app">Restart application</string>
    <string name="close_app">Close application</string>

    <!-- Login Activity -->
    <string name="title_login_username">Username</string>
    <string name="title_login_password">Password</string>
    <string name="login_button">Login</string>
    <string name="logout_button">Logout</string>
    <string name="google_login_button">Login with Google</string>
    <string name="login_success_message">Login successfully</string>
    <string name="login_fail_message">Login failed</string>
    <string name="logout_success_message">Logout successfully</string>
    <string name="connection_success_message">FireBase connection successfully</string>
    <string name="connection_fail_message">FireBase connection failed</string>
    <string name="account_fail_message">FireBase account failed</string>

    <!-- Action Bar -->
    <string name="action_logout_confirm_message">"Are you sure to logout?"</string>
    <string name="action_logout_confirm_yes">"Yes"</string>
    <string name="action_logout_confirm_no">"No"</string>
    <string name="action_logout_cancel">Action cancelled</string>
    <string name="title_settings">Preference Settings</string>
    <string name="action_about_message">Development Team: Whale Did You Go?</string>
    <string name="title_about">About the application</string>
    <string name="title_about_info">Application introduction: \nThe application developed for families with elders is based on the three functions of the calendar, one-touch dialing, and real-time monitoring of whether the user has fallen. If the user falls, the phone will issue an alarm for help in order to obtain timely assistance.</string>
    <string name="title_about_app">Whale Did You Go? - Super Senior</string>
    <string name="title_about_version">Version：alpha 1.0.0</string>

    <!-- Bottom Navigation Activity-->
    <string name="title_schedule">Schedule</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notification">Notification</string>

    <!-- Schedule Fragment : Daily Calendar -->
    <string name="title_insert">Insert Event</string>
    <string name="title_update">Update Event</string>
    <string name="event_title">Title:</string>
    <string name="event_starttime">Start Time:</string>
    <string name="event_endtime">End Time:</string>
    <string name="event_startdate">Start Date:</string>
    <string name="event_enddate">End Date: </string>
    <string name="event_selected_starttime">Selected Start Time:</string>
    <string name="event_selected_endtime">Selected End Time:</string>
    <string name="event_selected_startdate">Selected Start Date:</string>
    <string name="event_selected_enddate">Selected End Date:</string>
    <string name="change_calendar">Change Calendar</string>
    <string name="refresh">Refresh</string>
    <string name="event_select_starttime">Select Start Time</string>
    <string name="event_select_endtime">Select End Time</string>
    <string name="event_select_startdate">Select Start Date</string>
    <string name="event_select_enddate">Select End Date</string>
    <string name="event_done_button">Done</string>
    <string name="event_delete_button">Delete</string>
    <string name="event_update_button">Update</string>
    <string name="event_yes_button">Yes</string>
    <string name="event_No_button">No</string>
    <string name="event_ok_button">OK</string>
    <string name="event_cancel_button">Cancel</string>
    <string name="event_des">Description: </string>
    <string name="no_event">No Event!</string>
    <string name="no_permission">No Permission!</string>
    <string name="event_insert_success">Inserted Successfully!</string>
    <string name="event_update_success">Updated Successfully!</string>
    <string name="event_delete_success">Deleted Successfully!</string>
    <string name="done_question">Are you confirm that you have finished this event?</string>
    <string name="done_message">Well Done!</string>
    <string name="delete_question">Are you sure that you want to delete this event?</string>
    <string name="datetime_error">Date or Time Error!</string>
    <string name="cannot_find_calendar">Cannot Find Calendar!</string>
    <string name="done_sms">Elderly has completed this event</string>
    <string name="no_contact_person">There is no Contact Person!</string>
    <string name="event_already_done">This event has been done already!</string>
    <string name="event_time_am">AM</string>
    <string name="event_time_pm">PM</string>

    <!-- Dashboard Fragment : Single Touch Dialing -->
    <string name="title_create_contact">Create Contact Person</string>
    <string name="title_contact_name_1">Name 1</string>
    <string name="title_contact_name_2">Name 2</string>
    <string name="title_contact_name_3">Name 3</string>
    <string name="title_contact_person">Contact Person:</string>
    <string name="title_contact_number">Phone Number:</string>
    <string name="title_contact_confirm">Confirm</string>
    <string name="title_contact_reset">Reset</string>
    <string name="title_contact_add">Add</string>
    <string name="title_contact_cancel">Cancel</string>
    <string name="title_contact_debug">DEBUG:</string>
    <string name="image_choice">Choose a method for setting picture</string>
    <string name="image_choice_album">Album</string>
    <string name="image_choice_camera">Camera</string>
    <string name="contact_setup_complete">Completed!</string>
    <string name="contact_setup_missing">There are still missing information</string>
    <string name="contact_no_person">No contact</string>
    <string name="contact_no_persons">No contacts currently</string>
    <string name="quick_call">Quick Call</string>
    <string name="quick_message">Quick Message</string>
    <string name="send_message_to">Send message to…</string>
    <string name="are_you_sure_send_message_to">Are you sure send message?</string>
    <string name="send">Send</string>
    <string name="activity">Event</string>
    <string name="sec_after_recall">second redial to</string>
    <string name="cancel_recall">Cancel redial</string>
    <string name="auto_recall_to">Automatic redial to</string>
    <string name="title_recall">Redial timer</string>

    <!-- Quick message string -->
    <string name="hospital">go to the hospital</string>
    <string name="community_center">go to the community center</string>
    <string name="nursing_home">go to the nursing home</string>
    <string name="restaurant">go to the restaurant</string>
    <string name="supermarket">go to the supermarket</string>

    <string name="daily_necessities">buy daily necessities</string>
    <string name="medicines">buy medicines</string>
    <string name="mask">buy mask</string>
    <string name="clothes">buy clothes</string>
    <string name="food">buy food</string>

    <string name="lost">I am lost</string>
    <string name="property">I lost property</string>
    <string name="injured">I am injured</string>

    <!-- Notification Fragment : Fall Detection -->
    <string name="title_accelerometer_status">Accelerometer Status:</string>
    <string name="title_accelerometer_x">X Axis:&#160;</string>
    <string name="title_accelerometer_y">Y Axis:&#160;</string>
    <string name="title_accelerometer_z">Z Axis:&#160;</string>
    <string name="title_accelerometer_sum">Sum:&#160;</string>
    <string name="title_accelerometer_lat">Latitude:&#160;</string>
    <string name="title_accelerometer_lng">Longitude:&#160;</string>
    <string name="title_accelerometer_address">Current Address:&#160;</string>
    <string name="title_notification_switch">Fall-detection Switch</string>
    <string name="notification_switch_off">Off</string>
    <string name="notification_switch_on">On</string>
    <string name="title_caretaker_set">Setup Emergency Contact</string>
    <string name="title_caretaker_show">Show Emergency Contact</string>
    <string name="sensor_default_value">0.0</string>
    <string name="sensor_null_value">NULL</string>
    <string name="alert_start_message">Alert Started</string>
    <string name="alert_stop_message">Alert Stopped</string>
    <string name="delete_caretaker_confirm_message">Are you sure?</string>
    <string name="add_caretaker_empty_name_message">Caretaker name cannot be empty</string>
    <string name="add_caretaker_empty_phone_message">Contact number cannot be empty</string>
    <string name="add_caretaker_success_message">New caretaker saved</string>
    <string name="add_caretaker_error_message">Oops! something went wrong</string>
    <string name="notification_fall_detected_message">Fall detected</string>
    <string name="notification_timer_confirm_message">Confirmation</string>
    <string name="notification_timer_cancel">Cancel</string>
    <string name="notification_timer_message">Countdown timer to send message:</string>
    <string name="title_add_caretaker_name">Name:</string>
    <string name="title_add_caretaker_phone">Phone:</string>
    <string name="title_add_caretaker_save">✔ SAVE</string>
    <string name="title_list_caretaker_empty">There is no emergency contact</string>
    <string name="title_list_caretaker_delete">❌ DELETE</string>
    <string name="notification_sms_permission_accept">Permission accepted and sms was sent</string>
    <string name="notification_sms_permission_decline">No authorized sms permission, please authorize first</string>
    <string name="notification_sms_message1">The message sender (</string>
    <string name="notification_sms_message2">) have been fallen, click the link to see the possible location: https://maps.google.com/?q=</string>
    <string name="notification_sms_success">SMS was sent successfully</string>
    <string name="notification_sms_no_phone">No emergency contact</string>
    <string name="notification_sms_no_phone_message">There are no emergency contact has been set</string>
    <string name="notification_location_on">Turn on location</string>

    <string name="notification_sms_message">The message sender may have been fallen, click the link to see possible location: https://maps.google.com/?q=</string>
</resources>
