<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.schedule.UpdateEvent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_title"/>
            <EditText
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/event_title"
                android:ems="10" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_startdate"/>

            <Button
                android:id="@+id/select_startdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_select_startdate"/>

        </LinearLayout>

        <TextView
            android:id="@+id/selected_startdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_selected_startdate"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_starttime"/>

            <Button
                android:id="@+id/select_starttime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_select_starttime"/>

        </LinearLayout>

        <TextView
            android:id="@+id/selected_starttime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_selected_starttime"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_enddate"/>

            <Button
                android:id="@+id/select_enddate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_select_enddate"/>

        </LinearLayout>

        <TextView
            android:id="@+id/selected_enddate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_selected_enddate"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_endtime"/>

            <Button
                android:id="@+id/select_endtime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_select_endtime"/>

        </LinearLayout>

        <TextView
            android:id="@+id/selected_endtime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_selected_endtime"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_des"/>

        <EditText
            android:id="@+id/des"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_des" />

        <Button
            android:id="@+id/update_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_update"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>