<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_notification">

    <fragment
        android:id="@+id/navigation_schedule"
        android:name="com.example.whaledidyougo.ui.schedule.ScheduleFragment"
        android:label="@string/title_schedule"
        tools:layout="@layout/fragment_schedule" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.whaledidyougo.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notification"
        android:name="com.example.whaledidyougo.ui.notification.NotificationFragment"
        android:label="@string/title_notification"
        tools:layout="@layout/fragment_notification" />
</navigation>
