<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AboutActivity">

    <RelativeLayout
        android:id="@+id/layout_about_header"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/colorFourth">

        <ImageView
            android:id="@+id/img_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/img_about_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/title_about" />
    </RelativeLayout>

    <TextView
        android:id="@+id/txt_about_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_about_header"
        android:padding="30dp"
        android:textSize="17sp"
        android:lineSpacingExtra="3dp"
        android:lineSpacingMultiplier="1.3"
        android:text="@string/title_about_info" />

    <TextView
        android:id="@+id/txt_about_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txt_about_app_version"
        android:layout_centerHorizontal="true"
        android:text="@string/title_about_app" />

    <TextView
        android:id="@+id/txt_about_app_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:text="@string/title_about_version" />
</RelativeLayout>
