<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ui.dashboard.AddContactActivity">

    <ImageButton
        android:id="@+id/people1_image"
        android:layout_width="210dp"
        android:layout_height="280dp"
        android:layout_gravity="center_horizontal"
        android:scaleType="fitXY"
        android:src="@drawable/img_choose_photo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40dp"
            android:text="@string/title_contact_person" />

        <EditText
            android:id="@+id/people1_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_contact_number"
            android:textSize="40dp"/>

        <EditText
            android:id="@+id/people1_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:textSize="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="40dp"
                android:text="@string/title_contact_confirm" />

            <Button
                android:id="@+id/reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="40dp"
                android:text="@string/title_contact_reset" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
