<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_centerHorizontal="true"
    android:paddingTop="@dimen/fragment_vertical_margin"
    android:paddingBottom="@dimen/fragment_vertical_margin"
    android:paddingLeft="@dimen/fragment_horizontal_margin"
    android:paddingRight="@dimen/fragment_horizontal_margin"
    android:gravity="center_horizontal"
    android:orientation="horizontal">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quick_call"
        android:textSize="40dp"/>

    <TableRow
        android:gravity="center_horizontal">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/call_people1"
            android:scaleType="fitXY"
            android:src="@drawable/img_choose_photo" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/call_people2"
            android:scaleType="fitXY"
            android:src="@drawable/img_choose_photo" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/call_people3"
            android:scaleType="fitXY"
            android:src="@drawable/img_choose_photo" />
    </TableRow>

    <TableRow
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/people1_name"
            android:text="@string/title_contact_name_1"
            android:gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/people2_name"
            android:text="@string/title_contact_name_2"
            android:gravity="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/people3_name"
            android:text="@string/title_contact_name_3"
            android:gravity="center" />
    </TableRow>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quick_message"
        android:textSize="40dp"/>

    <!-- row 1 icon -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:src="@drawable/img_goingout"
            android:scaleType="centerInside"
            android:id="@+id/goingOut"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:src="@drawable/img_shopping"
            android:scaleType="centerInside"
            android:id="@+id/shopping"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:src="@drawable/img_urgent"
            android:scaleType="centerInside"
            android:id="@+id/urgent"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:src="@drawable/img_question"
            android:scaleType="centerInside"
            android:id="@+id/question"/>

    </LinearLayout>

</TableLayout>
